<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A2FF80"
    tools:context=".ActivitiesActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-medium"
        android:text="Activities"
        android:textAlignment="center"
        android:textColor="#002AFF"
        android:textSize="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="418dp"
        android:layout_height="520dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/acti"
                android:textColor="@color/purple_700"
                android:textSize="22dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/acti1"
                android:textColor="@color/black"
                android:textSize="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/acti2"
                android:textColor="@color/black"
                android:textSize="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/acti3"
                android:textColor="@color/purple_700"
                android:textSize="22dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/acti4"
                android:textColor="@color/black"
                android:textSize="15dp" />

            <ImageView
                android:layout_width="409dp"
                android:layout_height="180dp"
                android:src="@drawable/activity" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/acti5"
                android:textColor="@color/black"
                android:textSize="15dp" />

            <ImageView
                android:layout_width="409dp"
                android:layout_height="180dp"
                android:src="@drawable/activity1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/acti6"
                android:textColor="@color/black"
                android:textSize="15dp" />

            <ImageView
                android:layout_width="409dp"
                android:layout_height="400dp"
                android:src="@drawable/activity2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/acti7"
                android:textColor="@color/black"
                android:textSize="15dp" />

            <ImageView
                android:layout_width="409dp"
                android:layout_height="400dp"
                android:src="@drawable/activity3" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/acti8"
                android:textColor="@color/black"
                android:textSize="15dp" />

            <ImageView
                android:layout_width="409dp"
                android:layout_height="400dp"
                android:src="@drawable/activity4" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/acti9"
                android:textColor="@color/black"
                android:textSize="15dp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:src="@drawable/android"
                android:textAlignment="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/acti10"
                android:textColor="@color/black"
                android:textSize="15dp" />

            <ImageView
                android:layout_width="409dp"
                android:layout_height="230dp"
                android:src="@drawable/activity5" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/acti11"
                android:textColor="@color/black"
                android:textSize="15dp" />

            <ImageView
                android:layout_width="409dp"
                android:layout_height="100dp"
                android:src="@drawable/activity6" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/acti12"
                android:textColor="@color/black"
                android:textSize="15dp" />

            <ImageView
                android:layout_width="409dp"
                android:layout_height="80dp"
                android:src="@drawable/activity7" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/acti13"
                android:textColor="@color/black"
                android:textSize="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/acti14"
                android:textColor="@color/purple_700"
                android:textSize="22dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/acti15"
                android:textColor="@color/black"
                android:textSize="15dp" />

            <ImageView
                android:layout_width="409dp"
                android:layout_height="210dp"
                android:src="@drawable/activity8" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/acti16"
                android:textColor="@color/purple_700"
                android:textSize="22dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/acti17"
                android:textColor="@color/black"
                android:textSize="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/acti18"
                android:textColor="@color/purple_700"
                android:textSize="22dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/acti19"
                android:textColor="@color/black"
                android:textSize="15dp" />

            <ImageView
                android:layout_width="409dp"
                android:layout_height="130dp"
                android:src="@drawable/activity9" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/acti19"
                android:textColor="@color/black"
                android:textSize="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/acti20"
                android:textColor="@color/black"
                android:textSize="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/acti21"
                android:textColor="@color/black"
                android:textSize="15dp" />

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/btn_regresa_principal2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:onClick="regresaPrincipal"
        android:text="Regresar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView3"
        app:layout_constraintVertical_bias="0.168" />


</androidx.constraintlayout.widget.ConstraintLayout>